@@ -71,7 +71,7 @@
   msys-openssl.xml:2010090600
   msys-package-list.xml:2010100700
   msys-patch.xml:2010081000
-  msys-perl.xml:2010090500
+  msys-perl.xml:2011042700
   msys-popt.xml:2010080900
   msys-rebase.xml:2010090600
   msys-regex.xml:2010080500
